--- a/gitHub POC/Deploy/build.properties
+++ b/gitHub POC/Deploy/build.properties
@@ -4,11 +4,11 @@
 # Specify the login credentials for the desired Salesforce organization
 #sf.username = srinivas.mannem@sfdc3.com	
 #sf.password = Mnbv#123
-sf.proxy.host = 10.28.2.8  
-sf.proxy.port = 8080
+#sf.proxy.host = 10.28.2.8  
+#sf.proxy.port = 8080
 
-sf.username = ajay.satish@harman.com.gintegcopy
-sf.password = myTraf#123
+sf.username = ajayds@devtrial.com
+sf.password = Ajay@2017
 #sf.sessionId = <Insert your Salesforce session id here.  Use this or username/password above.  Cannot use both>
 #sf.pkgName = <Insert comma separated package names to be retrieved>
 #sf.zipFile = <Insert path of the zipfile to be retrieved>
@@ -16,7 +16,7 @@ sf.password = myTraf#123
 
 # Use 'https://login.salesforce.com' for production or developer edition (the default if not specified).
 # Use 'https://test.salesforce.com for sandbox.
-sf.serverurl = https://test.salesforce.com
+sf.serverurl = https://login.salesforce.com
 
 sf.maxPoll = 20
 # If your network requires an HTTP proxy, see http://ant.apache.org/manual/proxy.html for configuration.
